hphp/test/zend/good/Zend/tests/traits/language011.php.expectf

Fatal error: more than one trait contains method 'sayHello' in %s/language011.php on line 17
